--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
+  "test": "chai",
   "dependencies": {
     "firebase": "^4.1.3",
     "material-ui": "^0.18.6",
@@ -16,7 +17,14 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "chai": "^4.1.0",
+    "chai-enzyme": "^0.8.0",
+    "enzyme": "^2.9.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-scripts": "1.0.10",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^2.3.8",
+    "sinon-chai": "^2.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
